# azami

./: .gitignore  57回種生物学会.R  README.md  REPOSITORY_REVIEW.md  broad_group_bee_butterfly_fly_ssdm_analysis.R  broad_group_lepidoptera_merged_preVIF_gridEnvPCA_full.R  broad_group_ssdm_probability_lepidoptera_merged_collinearity_improved.R  cirsium_pollinator_grouping_sensitivity_model_comparison_full_fixed.R  crop_cirsium_heads_with_existing_yolo.py  full_candidateEnvPCA_pollinator_one_metric_reduced_collinearity.R  getcirsiumgbif.R  global_cirsium_ALL_CHELSA_RF_ONLY_RESUME_FIXED_MTRY.R  global_cirsium_full_rerun_RF_GLM_GAM_publication_figures.R  globi_cirsium_visitors_genus_guild_pipeline_v2.R  labels.csv  make_inat_training_from_kahaku_labels.py  predict_all_yolo_crops_with_fixed_model.py  pyproject.toml  run_pollinator_ssdm_vif10_maxnet_fixed.R  train_cirsium_head_direction_binary.py  train_head_direction_from_yolo_crops_fixed.py  validation_predictions.csv  validation_report.txt  第57回種生物学会supp.R
analysis/: README.md  audit_cirsium_molecular_coverage.py  audit_spatial_robustness.py  audit_taxonomic_freeze.py  build_independent_detector_audit_packet.py  build_real_image_figure1.py  build_supervisor_review_figures.py  decompose_nested_visible_variance.py  detector_audit_annotation_app.py  evaluate_independent_detector_audit.py  finalize_detector_audit_annotations.py  finalize_independent_detector_audit_packet.py  prepare_spatial_diagnostic_input.py  reanalyze_lability_precision.py  summarize_phylogenetic_signal_evidence.py  validate_final_claims.py
archive/: README.md
(+289 files in other folders)
