[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "azami-ch1"
version = "0.1.0"
description = "Submission-facing utilities for the frozen Azami Chapter 1 analysis"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
spatial = ["numpy>=1.26", "scipy>=1.11"]
image-audit = ["numpy>=1.26", "opencv-python-headless>=4.8", "pillow>=10", "matplotlib>=3.8"]
test = ["numpy>=1.26", "scipy>=1.11"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
